Bug 65242 - Fix printf format warning for size_t
Summary: Fix printf format warning for size_t
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 12:54 UTC by Hib Eris
Modified: 2013-06-01 13:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix printf format warning for size_t (1.17 KB, patch)
2013-06-01 12:54 UTC, Hib Eris
Details | Splinter Review

Description Hib Eris 2013-06-01 12:54:08 UTC
Fixes:

  CXX    pdfunite.o
pdfunite.cc: In function ‘int main(int, char**)’:
pdfunite.cc:142:59: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘std::vector<Object>::size_type {aka long unsigned int}’ [-Wformat]
Comment 1 Hib Eris 2013-06-01 12:54:11 UTC
Created attachment 80137 [details] [review]
Fix printf format warning for size_t
Comment 2 Albert Astals Cid 2013-06-01 13:14:38 UTC
Commited.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.