Fix printf format warning for size_t

Fixes:

  CXX    pdfunite.o
pdfunite.cc: In function ‘int main(int, char**)’:
pdfunite.cc:142:59: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘std::vector<Object>::size_type {aka long unsigned int}’ [-Wformat]

https://bugs.freedesktop.org/show_bug.cgi?id=65242